Bug 1608118 - Remove direct listeners from the source in ForwardedInputTrack when MediaInput is removed r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D60355

--HG--
extra : moz-landing-system : lando